feat(phase1.30): dsl changes v7