@@ -1,23 +1,31 @@
 package cbs.dsl.builder;
 
+import cbs.dsl.api.ContextTypes.ContextInput;
+import cbs.dsl.api.ContextTypes.ContextOutput;
 import cbs.dsl.api.DslObject;
 import cbs.dsl.api.HelperTypes.HelperInput;
 import cbs.dsl.api.HelperTypes.HelperOutput;
 import cbs.dsl.api.ParameterDefinition;
+import cbs.dsl.api.context.Context;
+import cbs.dsl.api.context.HelperContext;
 
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
+import java.util.Objects;
 import java.util.function.Consumer;
 import java.util.function.Function;
+import lombok.Getter;
 
 /** Builder for a single helper. Used internally by {@link HelpersBuilder}. */
 public class HelperBuilder {
 
+  @Getter
   private final String code;
   private final List<ParameterDefinition> parameters = new ArrayList<>();
-  private Function<HelperInput, HelperOutput> previewBlock;
-  private Function<HelperInput, HelperOutput> executeBlock;
+  private Function<Context, Context> contextBlock = Context::copy;
+  private Function<HelperContext, HelperContext> previewBlock;
+  private Function<HelperContext, HelperContext> executeBlock;
 
   HelperBuilder(String code) {
     this.code = code;
@@ -30,38 +38,29 @@ public class HelperBuilder {
     return this;
   }
 
-  public HelperBuilder preview(Function<HelperInput, HelperOutput> block) {
+  public HelperBuilder context(Function<Context, Context> block) {
+    this.contextBlock = block;
+    return this;
+  }
+
+  public HelperBuilder preview(Function<HelperContext, HelperContext> block) {
     this.previewBlock = block;
     return this;
   }
 
-  public HelperBuilder execute(Function<HelperInput, HelperOutput> block) {
+  public HelperBuilder execute(Function<HelperContext, HelperContext> block) {
     this.executeBlock = block;
     return this;
-  }
-
-  public String getCode() {
-    return code;
-  }
-
-  public List<ParameterDefinition> getParameters() {
-    return Collections.unmodifiableList(new ArrayList<>(parameters));
-  }
-
-  public Function<HelperInput, HelperOutput> preview() {
-    return previewBlock;
-  }
-
-  public Function<HelperInput, HelperOutput> execute() {
-    return executeBlock;
   }
 
   DslObject build() {
     return HelperDslObject.builder()
         .code(code)
-        .parameters(Collections.unmodifiableList(new ArrayList<>(parameters)))
+        .parameters(List.copyOf(parameters))
+        .contextBlock(contextBlock)
         .previewBlock(previewBlock)
         .executeBlock(executeBlock)
         .build();
   }
+
 }
